start a ui and wire up buttons to puck a golden girl.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,5 +11,7 @@
 
 @import "layout/header";
 @import "layout/_footer";
+@import "layout/character";
+@import "layout/battleBoard";
 
 @import "pages/home";
