add functionality to battle board

--- a/src/scss/layout/_battleBoard.scss
+++ b/src/scss/layout/_battleBoard.scss
@@ -1,11 +1,31 @@
 .battle-board {
+  margin: 25px 0px;
+  display: none;
   height: 100%;
   background-color: #333;
   color: white;
   padding: 20px;
   text-align: center;
 
-  button {
-    margin: 15px;
+  img {
+    margin: 20px 5px;
+    height: 200px;
   }
+}
+
+#start {
+  margin: 20px auto;
+  width: 50%;
+}
+
+.attack-hold {
+  display: none;
+}
+
+#turn-name {
+  display: none;
+}
+
+.turn-alert {
+  display: none;
 }
